devfullstack/iprofile/k8s_2/deployment-frontend.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: iprofile-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iprofile-frontend
  template:
    metadata:
      labels:
        app: iprofile-frontend
    spec:
      containers:
        - name: frontend
          image: iprofile-frontend:1.0
          ports:
            - containerPort: 80
