devfullstack/iprofile/k8s_2/service-backend.yaml

apiVersion: v1
kind: Service
metadata:
  name: iprofile-backend
spec:
  selector:
    app: iprofile-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
