devfullstack/iprofile/k8s_2/service-frontend.yaml

apiVersion: v1
kind: Service
metadata:
  name: iprofile-frontend
spec:
  selector:
    app: iprofile-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
