devfullstack/iprofile/k8s_2/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iprofile-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /iprofile/api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: iprofile-backend
                port:
                  number: 80
          - path: /iprofile/?(.*)
            pathType: Prefix
            backend:
              service:
                name: iprofile-frontend
                port:
                  number: 80
